--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">Local Edition helps you discover new places to travel to on your vacations</h1>
+              <h1 class="mb-5">Local Edition helps you discover new activities on your vacations</h1>
               <a href="https://itunes.apple.com/us/app/local-edition-travelers-app/id1343627583?mt=8&ign-mpt=uo%3D4" class="btn btn-outline btn-xl js-scroll-trigger">Download for Free</a>
             </div>
           </div>
@@ -125,14 +125,14 @@
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-compass text-primary"></i>
-                    <h3>Discover</h3>
+                    <h3>Discover New Travel Destinations</h3>
                     <p class="text-muted">Follow your friends trips and find out new destinations to travel to!</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-notebook text-primary"></i>
-                    <h3>Bookmark</h3>
+                    <h3>Bookmark Your Favorite Activites for Later</h3>
                     <p class="text-muted">No more Google Docs! Build your next itinerary from the places you've bookmarked.</p>
                   </div>
                 </div>
@@ -141,14 +141,14 @@
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-map text-primary"></i>
-                    <h3>Explore</h3>
+                    <h3>Find the Best Tips for each Destination</h3>
                     <p class="text-muted">Read about your friends' favorite places to travel to in each destination.</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-magic-wand text-primary"></i>
-                    <h3>Automatic</h3>
+                    <h3>Easily Create Vacation Albums</h3>
                     <p class="text-muted">Document your adventures easily, with albums automatically created by geography</p>
                   </div>
                 </div>
