--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-map text-primary"></i>
-                    <h3>Find the Best Tips for each Destination</h3>
+                    <h3>Find the Best Tips for Each Destination</h3>
                     <p class="text-muted">Read about your friends' favorite places to travel to in each destination.</p>
                   </div>
                 </div>
