Minor text change

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">Local Edition helps you discover new activities on your vacations</h1>
+              <h1 class="mb-5">Local Edition helps you discover new activities for your vacations</h1>
               <a href="https://itunes.apple.com/us/app/local-edition-travelers-app/id1343627583?mt=8&ign-mpt=uo%3D4" class="btn btn-outline btn-xl js-scroll-trigger">Download for Free</a>
             </div>
           </div>
