--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Local Edition - Travelers App</title>
+    <title>Local Edition - Travel Stories</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Local Edition - Travelers App</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Local Edition - Travel Stories</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -60,7 +60,7 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <h1 class="mb-5">Local Edition helps you discover new activities for your vacations</h1>
-              <a href="https://itunes.apple.com/us/app/local-edition-travelers-app/id1343627583?mt=8&ign-mpt=uo%3D4" class="btn btn-outline btn-xl js-scroll-trigger">Download for Free</a>
+              <a href="https://itunes.apple.com/us/app/local-edition-travel-stories/id1343627583?mt=8/id1343627583?mt=8&ign-mpt=uo%3D4" class="btn btn-outline btn-xl js-scroll-trigger">Download for Free</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
@@ -89,7 +89,7 @@
             <h2 class="section-heading">Join the #1 Social Network for Travel</h2>
             <p>Our app is available on the App Store!</p>
             <div class="badges">
-              <a class="badge-link" href="https://itunes.apple.com/us/app/local-edition-travelers-app/id1343627583?mt=8&ign-mpt=uo%3D4"><img src="img/app-store-badge.svg" alt=""></a>
+              <a class="badge-link" href="https://itunes.apple.com/us/app/local-edition-travel-stories/id1343627583?mt=8/id1343627583?mt=8&ign-mpt=uo%3D4"><img src="img/app-store-badge.svg" alt=""></a>
             </div>
           </div>
         </div>
@@ -110,10 +110,7 @@
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <!--<img src="img/feed.png" class="img-fluid" alt=""> -->
-                    <video autoplay loop class="embed-responsive-item">
-        			<source src="video.mov" type="video/mov">
-   					 </video>
+                   <img src="img/feed.png" class="img-fluid" alt="">
                   </div>
                   <div class="button">
                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -166,7 +163,7 @@
       <div class="cta-content">
         <div class="container">
           <h2>Discover. Bookmark.<br>Explore.</h2>
-          <a href="https://itunes.apple.com/us/app/local-edition-travelers-app/id1343627583?mt=8&ign-mpt=uo%3D4" class="btn btn-outline btn-xl js-scroll-trigger">Join Today</a>
+          <a href="https://itunes.apple.com/us/app/local-edition-travel-stories/id1343627583?mt=8/id1343627583?mt=8&ign-mpt=uo%3D4" class="btn btn-outline btn-xl js-scroll-trigger">Join Today</a>
         </div>
       </div>
       <div class="overlay"></div>
@@ -187,7 +184,7 @@
 
     <footer>
       <div class="container">
-        <p>&copy; Local Edition - Travelers App 2018. All Rights Reserved.</p>
+        <p>&copy; Local Edition - Travel Stories 2018. All Rights Reserved.</p>
       </div>
     </footer>
 
